--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -168,6 +168,10 @@ table {
   margin: 0 0 20px 0;
 }
 
+tr {
+  text-align: center;
+}
+
 th {
   text-align: left;
   border-bottom: 1px dashed #b5e853;
